1999-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smiquery.c: adapted to current API.

	* lib/smi.h: added IndexNode and MemberNode functions.

1999-05-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* configure.in: LIBSMI_VERSION=0.1

	* Makefile: now building shared library. This heavily depends
	on the platform and bin-utils. Just tested for Solaris 2.5.1
	and Linux with GNU gcc and bin-utils.
	
	* configure.in: started GNU configure support.

	* ChangeLog: started ChangeLog.
